  in HTTP uploads). (Ilia)
- Fixed bug #47409 (extract() problem with array containing word "this").
  (Ilia, chrisstocktonaz at gmail dot com)
- Fixed bug #47002 (Field truncation when reading from dbase dbs with more
  then 1024 fields). (Ilia, sjoerd-php at linuxonly dot nl)
- Fixed bug #45599 (strip_tags() truncates rest of string with invalid
  attribute). (Ilia, hradtke)  


17 Dec 2009, PHP 5.2.12
- Updated timezone database to version 2009.19 (2009s). (Derick)

- Added LIBXML_PARSEHUGE constant to overrides the maximum text size of a
  single text node when using libxml2.7.3+. (Kalle)
- Added protection for $_SESSION from interrupt corruption and improved
  "session.save_path" check. (Stas)
- Added "max_file_uploads" INI directive, which can be set to limit the
  number of file uploads per-request to 20 by default, to prevent possible
  DOS via temporary file exhaustion. (Ilia)

- Changed "post_max_size" php.ini directive to allow unlimited post size by
  setting it to 0. (Rasmus)

- Improved fix for bug #50006 (Segfault caused by uksort()). (Stas)

- Fixed error_log() to be binary safe when using message_type 3. (Jani)
- Fixed unnecessary invocation of setitimer when timeouts have been disabled.
  (Arvind Srinivasan)
- Fixed crash in com_print_typeinfo when an invalid typelib is given.
  (Pierre)
- Fixed a safe_mode bypass in tempnam() identified by Grzegorz Stachowiak.  
  (Rasmus)
- Fixed a open_basedir bypass in posix_mkfifo() identified by Grzegorz 
  Stachowiak. (Rasmus)
- Fixed crash in SQLiteDatabase::ArrayQuery() and SQLiteDatabase::SingleQuery()
  when calling using Reflection. (Felipe)
- Fixed crash when instantiating PDORow and PDOStatement through Reflection.
  (Felipe)
- Fixed memory leak in openssl_pkcs12_export_to_file(). (Felipe)

- Fixed bug #50445 (PDO-ODBC stored procedure call from Solaris 64-bit causes
  segfault). (davbrown4 at yahoo dot com, Felipe)
- Fixed bug #50345 (nanosleep not detected properly on some solaris versions).